--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <header class="mb-6 flex justify-between items-end border-b-2 border-blue-600 pb-4">
             <div>
                 <h1 class="text-3xl font-extrabold text-slate-800 tracking-tight">Gemini <span class="text-blue-600">NOTAM</span> Radar</h1>
-                <p class="text-slate-500 mt-1 font-medium">專業級航空公告視覺化解析引擎 <span class="text-xs bg-blue-100 text-blue-700 px-2 py-0.5 rounded ml-2">v2.1 強化版</span></p>
+                <p class="text-slate-500 mt-1 font-medium">航空公告視覺化解析引擎 <span class="text-xs bg-blue-100 text-blue-700 px-2 py-0.5 rounded ml-2">測試中</span></p>
             </div>
             <div class="text-right">
-                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Flight Ops Internal Use Only</div>
+                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">NOTAM MAP </div>
                 <div id="clock" class="text-sm font-mono text-blue-600 font-bold"></div>
             </div>
         </header>
